--- a/src/app/components/results/results.component.scss
+++ b/src/app/components/results/results.component.scss
@@ -11,7 +11,7 @@ div.card-body {
 #datasetContainer {
     position: sticky;
     top: 48px;
-    z-index: 1040;
+    z-index: 99998;
 }
 
 #prColumnChartRow {
